--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "sites/all/modules/etype_xml_importer"]
 	path = sites/all/modules/etype_xml_importer
 	url = git@github.com:etype-services/etype_xml_importer.git
+[submodule "sites/all/modules/etype_zenfolio"]
+	path = sites/all/modules/etype_zenfolio
+	url = git@github.com:etype-services/etype_zenfolio.git
