--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "sites/all/modules/etype_smugmug"]
 	path = sites/all/modules/etype_smugmug
 	url = git@github.com:etype-services/etype_smugmug.git
+[submodule "sites/all/modules/etype_newsletters"]
+	path = sites/all/modules/etype_newsletters
+	url = git@github.com:etype-services/etype_newsletters.git
