--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "sites/all/modules/etype_xml_importer"]
 	path = sites/all/modules/etype_xml_importer
 	url = git@github.com:etype-services/etype_xml_importer.git
+[submodule "sites/all/modules/etype_wire"]
+	path = sites/all/modules/etype_wire
+	url = git@github.com:etype-services/etype_wire.git
