--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "sites/all/modules/etype_wire"]
 	path = sites/all/modules/etype_wire
 	url = git@github.com:etype-services/etype_wire.git
+[submodule "sites/all/modules/premium_content"]
+	path = sites/all/modules/premium_content
+	url = git@github.com:etype-services/premium_content.git
