--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "sites/all/modules/premium_content"]
 	path = sites/all/modules/premium_content
 	url = git@github.com:etype-services/premium_content.git
+[submodule "sites/all/modules/etype_paywall"]
+	path = sites/all/modules/etype_paywall
+	url = git@github.com:etype-services/etype_paywall.git
