--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "sites/all/modules/etype_paywall"]
 	path = sites/all/modules/etype_paywall
 	url = git@github.com:etype-services/etype_paywall.git
+[submodule "sites/all/modules/etype_sliderad"]
+	path = sites/all/modules/etype_sliderad
+	url = git@github.com:etype-services/etype_sliderad.git
